user-skel/ansible_collections/ace_box/ace_box/roles/app-hipstershop/files/(ORIGINAL)microservices-demo-dynatrace/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: microservices-demo-dynatrace.aks-ger.k8s-demo.dynatracelabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-external
                port:
                  number: 80
  tls:
    - hosts:
        - microservices-demo-dynatrace.aks-ger.k8s-demo.dynatracelabs.com
      secretName: frontend-tls
